--- a/_includes/components/header.njk
+++ b/_includes/components/header.njk
@@ -19,6 +19,8 @@
 			<span class="grid__item">{{ settings.metadata.site_subtitle_2 }}</span>
 		{% endif %}
 
+		<span class="grid__item"><a href="/work" class="link-nostyle">Work<a></span>
+
 		{% if settings.theme.theme_features.enable_dark_mode %}
 
 			<div class="grid__item grid__item--end grid__item--top">
